--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,11 @@ ncursesw = "0.6.4"
 gettext-rs = {version = "0.7.0", features = ["gettext-system"], default_features = false}
 ctrlc = "3.2.5"
 ascii = "1.1.0"
+
+[profile.dev]
+opt-level = 0
+debug = true
+
+[profile.release]
+opt-level = 3
+debug = false
